--- a/Atividade_10/atividade_10.ipynb
+++ b/Atividade_10/atividade_10.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7f1da6a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pair Trading: KO vs PEP — 5 anos\n",
+    "# Estratégia de Pair Trading com GLD e IAU (ETFs de ouro)\n",
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "fe51a40e",
    "metadata": {},
    "outputs": [
@@ -33,16 +33,16 @@
     }
    ],
    "source": [
-    "# 1. Baixar os dados (5 anos)\n",
-    "tickers = ['KO', 'PEP']\n",
+    "# 1. Coleta de dados - 5 anos de histórico\n",
+    "tickers = ['GLD', 'IAU']\n",
     "start = '2019-07-01'\n",
     "end = '2024-07-01'\n",
-    "df = yf.download(tickers, start=start, end=end)['Close'].dropna()"
+    "df = yf.download(tickers, start=start, end=end)['Adj Close'].dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "60db309f",
    "metadata": {},
    "outputs": [
@@ -56,63 +56,63 @@
     }
    ],
    "source": [
-    "# 2. Teste de cointegração\n",
-    "score, pvalue, _ = coint(df['KO'], df['PEP'])\n",
-    "print(f'P-valor do teste de cointegração: {pvalue:.4f}')\n",
+    "# 2. Teste de cointegração (Engle-Granger)\n",
+    "score, pvalue, _ = coint(df['GLD'], df['IAU'])\n",
+    "print(f\"P-valor da cointegração: {pvalue:.4f}\")\n",
     "if pvalue < 0.05:\n",
     "    print(\"Os ativos são cointegrados — válido para Pair Trading\")\n",
     "else:\n",
-    "    print(\"Os ativos não são cointegrados — atenção!\")"
+    "    print(\" Os ativos não são cointegrados — cuidado!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "452bbb80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Cálculo do spread e Z-score\n",
-    "spread = df['KO'] - df['PEP']\n",
-    "zscore_spread = zscore(spread)\n"
+    "# 3. Calcular spread e Z-score\n",
+    "spread = df['GLD'] - df['IAU']\n",
+    "zscore_spread = zscore(spread)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "481ed2ca",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 4. Estratégia de negociação (baseada no Z-score do spread)\n",
+    "entry_z = 1.0     # Entrada quando zscore > 1 ou < -1\n",
+    "exit_z = 0.0      # Saída quando zscore ≈ 0\n",
     "\n",
-    "# 4. Estratégia de entrada e saída\n",
-    "entry_z = 1.0\n",
-    "exit_z = 0.0\n",
     "signals = pd.DataFrame(index=df.index)\n",
     "signals['Z-Score'] = zscore_spread\n",
-    "signals['Position_KO'] = 0\n",
-    "signals['Position_PEP'] = 0"
+    "signals['Position_GLD'] = 0\n",
+    "signals['Position_IAU'] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d6208385",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lógica de trade\n",
-    "signals.loc[signals['Z-Score'] > entry_z, ['Position_KO', 'Position_PEP']] = [-1, 1]  # Vende KO, compra PEP\n",
-    "signals.loc[signals['Z-Score'] < -entry_z, ['Position_KO', 'Position_PEP']] = [1, -1]  # Compra KO, vende PEP\n",
-    "signals.loc[abs(signals['Z-Score']) < exit_z, ['Position_KO', 'Position_PEP']] = [0, 0]  # Zera\n",
+    "# Sinais de entrada e saída\n",
+    "signals.loc[signals['Z-Score'] > entry_z, ['Position_GLD', 'Position_IAU']] = [-1, 1]  # Vende GLD, compra IAU\n",
+    "signals.loc[signals['Z-Score'] < -entry_z, ['Position_GLD', 'Position_IAU']] = [1, -1]  # Compra GLD, vende IAU\n",
+    "signals.loc[abs(signals['Z-Score']) < exit_z, ['Position_GLD', 'Position_IAU']] = [0, 0]  # Zera posições\n",
     "\n",
-    "# Preencher as posições ao longo do tempo\n",
-    "signals[['Position_KO', 'Position_PEP']] = signals[['Position_KO', 'Position_PEP']].ffill().fillna(0)\n"
+    "# Preencher posições ao longo do tempo\n",
+    "signals.fillna(method='ffill', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "9dd42124",
    "metadata": {},
    "outputs": [
@@ -126,15 +126,15 @@
     }
    ],
    "source": [
-    "# 5. Cálculo dos retornos\n",
-    "returns = (signals[['Position_KO', 'Position_PEP']].shift(1) * df.pct_change()).sum(axis=1)\n",
+    "# 5. Cálculo dos retornos da estratégia\n",
+    "returns = (signals[['Position_GLD', 'Position_IAU']].shift(1) * df.pct_change()).sum(axis=1)\n",
     "cumulative_returns = (1 + returns).cumprod()\n",
     "\n",
-    "# 6. Métricas\n",
+    "# 6. Métricas de desempenho\n",
     "sharpe = np.mean(returns) / np.std(returns) * np.sqrt(252)\n",
     "running_max = cumulative_returns.cummax()\n",
     "drawdown = (cumulative_returns - running_max) / running_max\n",
-    "max_dd = drawdown.min()"
+    "max_drawdown = drawdown.min()\n"
    ]
   },
   {
@@ -145,25 +145,28 @@
    "outputs": [],
    "source": [
     "# 7. Gráficos\n",
+    "\n",
     "plt.figure(figsize=(14, 8))\n",
     "\n",
+    "# Preço dos ativos\n",
     "plt.subplot(3, 1, 1)\n",
-    "plt.plot(df['KO'], label='KO (Coca-Cola)')\n",
-    "plt.plot(df['PEP'], label='PEP (Pepsi)')\n",
+    "plt.plot(df['GLD'], label='GLD')\n",
+    "plt.plot(df['IAU'], label='IAU')\n",
+    "plt.title('Preços Históricos: GLD e IAU (5 anos)')\n",
     "plt.legend()\n",
-    "plt.title('Preços históricos (5 anos)')\n",
     "\n",
+    "# Z-score do spread\n",
     "plt.subplot(3, 1, 2)\n",
-    "plt.plot(zscore_spread, label='Z-Score do Spread', color='purple')\n",
+    "plt.plot(signals['Z-Score'], color='purple')\n",
     "plt.axhline(entry_z, color='red', linestyle='--')\n",
     "plt.axhline(-entry_z, color='green', linestyle='--')\n",
     "plt.axhline(0, color='black', linestyle='-')\n",
-    "plt.legend()\n",
-    "plt.title('Z-Score do Spread KO - PEP')\n",
+    "plt.title('Z-Score do Spread (GLD - IAU)')\n",
     "\n",
+    "# Curva de capital\n",
     "plt.subplot(3, 1, 3)\n",
     "plt.plot(cumulative_returns, label='Curva de Capital', color='darkblue')\n",
-    "plt.title(f'Curva de Capital | Sharpe: {sharpe:.2f} | Max Drawdown: {max_dd:.2%}')\n",
+    "plt.title(f'Rendimento da Estratégia | Sharpe: {sharpe:.2f} | Max Drawdown: {max_drawdown:.2%}')\n",
     "plt.legend()\n",
     "\n",
     "plt.tight_layout()\n",
