--- a/Atividade_9/atividade_9.ipynb
+++ b/Atividade_9/atividade_9.ipynb
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "188a4fa5",
    "metadata": {},
    "outputs": [
@@ -1078,9 +1078,7 @@
     "    # Normalizar a contribuição para somar 100% para este PC\n",
     "    contrib_pc_percent = (contrib_pc / contrib_pc.sum()) * 100\n",
     "    print(f\"\\nMaiores contribuições dos ativos para a Variância do PC{pc_num}:\")\n",
-    "    print(contrib_pc_percent.sort_values(ascending=False).head().round(2))\n",
-    "\n",
-    "    # Análise: Quais ativos mais \"definem\" o PC?"
+    "    print(contrib_pc_percent.sort_values(ascending=False).head().round(2))"
    ]
   },
   {
